# tg561-thesis

./: .gitignore  .gitmodules  README.md  pyproject.toml
configs/: smoke_picard.yaml  toy_sqlguard.yaml
results/: smoke_picard.json  toy_sqlguard.json
scripts/: picard_check_sql.py  plot_topk_tradeoff.py  smoke_picard.py  summarize_topk.py
src/constraints/: base.py  picard_wrapper.py  sqlguard.py
src/runner/: run.py  run_hf_batch.py  run_hf_generate.py  run_toy_decode.py
tests/: test_sql_sanity.py
tg561_thesis.egg-info/: SOURCES.txt
